overlapping bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@
     margin-top: -10px;
 }
 #selection-area{
+    float: left;
     height: 100vh;
     width: 100%;
     border: 10px solid black;
